# pipelines

./: .gitignore  README.md  main.py  main.py.example  pyproject.toml  requirements.txt  run_scirpt.txt  run_script.bat  stats.json
conf/base/: catalog.yml  parameters_blood_donation_trend.yml
notebooks/: malaysia data.ipynb
src/test/pipelines/blood_donation_trend/: __init__.py  nodes.py  pipeline.py
src/test/pipelines/donator_retention/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/blood_donation_trend/: test_pipeline.py
src/tests/pipelines/donator_retention/: test_pipeline.py
