[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "test"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
test = "test.__main__:main"

[tool.kedro]
package_name = "test"
project_name = "test"
kedro_init_version = "0.19.1"
tools = [ "Data Structure",]
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "test.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
